// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:parsers/PunctuatorParser > #arrow > should parse "=>" 1`] = `
tokens[2]
├─0 punctuator "=" (1:1-1:2, 0-1)
│     whitespace: ""
└─1 punctuator ">" (1:2-1:3, 1-2)
      whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > #ellipsis > should parse "..." 1`] = `
tokens[3]
├─0 punctuator "." (1:1-1:2, 0-1)
│     whitespace: ""
├─1 punctuator "." (1:2-1:3, 1-2)
│     whitespace: ""
└─2 punctuator "." (1:3-1:4, 2-3)
      whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.ampersand 1`] = `
punctuator "&" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.asterisk 1`] = `
punctuator "*" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.at 1`] = `
punctuator "@" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.backslash 1`] = `
punctuator "\\\\" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.backtick 1`] = `
punctuator "\`" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.bar 1`] = `
punctuator "|" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.caret 1`] = `
punctuator "^" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.colon 1`] = `
punctuator ":" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.comma 1`] = `
punctuator "," (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.dollar 1`] = `
keyid "$" (1:1-1:2, 0-1)
  whitespace: ""
  private: false
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.dot 1`] = `
punctuator "." (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.equal 1`] = `
punctuator "=" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.exclamation 1`] = `
punctuator "!" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.gt 1`] = `
punctuator ">" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.hash 1`] = `
punctuator "#" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.leftBrace 1`] = `
punctuator "{" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.leftBracket 1`] = `
punctuator "[" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.leftParen 1`] = `
punctuator "(" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.lt 1`] = `
punctuator "<" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.minus 1`] = `
punctuator "-" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.percent 1`] = `
punctuator "%" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.plus 1`] = `
punctuator "+" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.question 1`] = `
punctuator "?" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.rightBrace 1`] = `
punctuator "}" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.rightBracket 1`] = `
punctuator "]" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.rightParen 1`] = `
punctuator ")" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.semicolon 1`] = `
punctuator ";" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.slash 1`] = `
punctuator "/" (1:1-1:2, 0-1)
  whitespace: ""
`;

exports[`unit:parsers/PunctuatorParser > chars > should parse chars.tilde 1`] = `
punctuator "~" (1:1-1:2, 0-1)
  whitespace: ""
`;
